[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pygammaspec"
version = "0.0.1"
authors = [
  { name="Pierpaolo Pravatto" },
]
description = "A simple python library to process gamma ray spectroscopy data"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPL-3.0 License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib"
]

[project.urls]
"Homepage" = "https://github.com/ppravatto/PyGammaSpec"
"Bug Tracker" = "https://github.com/ppravatto/PyGammaSpec/issues"